add pause member
